--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -6,7 +6,7 @@
 
 /* Header styles */
 header {
-  background-color: #FE052C;
+  background-color: black;
   position: fixed;
   top: 0;
   left: 0;
@@ -81,7 +81,7 @@ header #search.active a {
 header nav a {
   display:block;
 	padding:0 10px;
-	color:#FFF;
+	color: #808080;
 	font-size:16px;
 	line-height: 40px;
 	text-decoration:none;
@@ -89,8 +89,8 @@ header nav a {
 }
 
 header nav a:hover {
-  background-color: #fff;
-  color: #CC0020;
+  background-color: #808080;
+  color: #e6e6e6;
 }
 
 nav ul {
@@ -103,7 +103,7 @@ nav ul {
 
 nav ul li {
 	display:inline-block;
-	background-color: #CC0020;
+	background-color: #e6e6e6;
   position: relative;
 }
 
@@ -132,49 +132,49 @@ nav ul ul li {
   margin-top: 65px;
 }
 
-/* Individual Article Styling */
-.article {
+/* Individual Items Styling */
+.activity {
   border-bottom: 1px solid #ccc;
   transition: 0.2s all;
 }
 
-.article:hover {
+.activity:hover {
   padding: 0 2%;
   background-color: #eee;
 }
 
-.article .featuredImage {
+.activity .featuredImage {
   width: 12%;
   float: left;
   margin: 1.5%;
   max-width: 60px;
 }
 
-.article .featuredImage img {
+.activity .featuredImage img {
   max-width: 100%;
   border-radius: 50px;
 }
 
-.article .articleContent {
+.activity .activityContent {
   width: 70%;
   float: left;
 }
 
-.article .articleContent a {
+.activity .activityContent a {
   text-decoration: none;
 }
 
-.article .articleContent h3 {
+.activity .activityContent h3 {
   margin-bottom: 0;
-  color: #FE052C;
+  color: blue;
 }
 
-.article .articleContent h6 {
+.activity .activityContent h6 {
   margin-top: 0;
   color: #666;
 }
 
-.article .impressions {
+.activity .impressions {
   width: 15%;
   float: right;
   font-size: 15px;
