--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -104,35 +104,35 @@ article.activity {
     padding: 20px;
 }
 
-.activity .featuredImage {
+.activity .featured-image {
   width: 12%;
   float: left;
   margin: 1.5%;
   max-width: 60px;
 }
 
-.activity .featuredImage img {
+.activity .featured-image img {
   max-width: 100%;
 }
 
-.activity .activityContent {
+.activity .activity-content {
   width: 70%;
   float: left;
 }
 
-.activity .activityContent a {
+.activity .activity-content a {
   text-decoration: none;
 }
 
-.activity .activityContent h3 {
+.activity .activity-content h3 {
   margin-bottom: 0;
   color: blue;
 }
-.activity .activityContent h3:hover {
+.activity .activity-content h3:hover {
   opacity: .7;
 }
 
-.activity .activityContent h6 {
+.activity .activity-content h6 {
   margin-top: 0;
   color: #666;
 }
