--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -47,6 +47,15 @@ h2.landing-page {
   display: none;
 }
 
+.fa-trash:before {
+    padding-left: 10px;
+    cursor: pointer;
+}
+
+.message-form {
+    padding-top: 15px;
+}
+
 /* Header styles */
 header {
   background-color: black;
@@ -126,7 +135,7 @@ article.activity {
 
 .activity .activity-content h3 {
   margin-bottom: 0;
-  color: blue;
+  color: #337ab7;
 }
 .activity .activity-content h3:hover {
   opacity: .7;
@@ -137,13 +146,13 @@ article.activity {
   color: #666;
 }
 
-.activity .impressions {
+.activity .rating {
   width: 15%;
   float: right;
   font-size: 15px;
   margin-top: 15px;
   text-align: right;
-  color: #097FB2;
+  color: #ff390c;
 }
 .address {
 
